@@ -1,6 +1,11 @@
 clear
-./gradlew test
-./gradlew customFatJar --refresh-dependencies
-clear
-java -jar build/libs/ASE-Finanzplaner-1.0-SNAPSHOT.jar
+./gradlew test --stacktrace
+./gradlew build --refresh-dependencies --stacktrace
+
+mkdir ./app
+mkdir ./app/output
+cp -R ./src/main/resources/resources ./app/output/resources/
+cp ./build/libs/ASE-Finanzplaner-1.0-SNAPSHOT.jar ./app/app.jar
+
+java --enable-preview -jar ./app/app.jar
 
